# mothur

./: .gitignore  .travis.yml  1.temp  2.temp  CMakeLists.txt
TestMothur/: catch.hpp  testbiominfocommand.h
TestMothur/testcommands/: testgetgroupscommand.h  testmergegroupscommand.h  testremovegroupscommand.h
TestMothur/testcontainers/: testsequence.h
source/: application.h  averagelinkage.cpp  calcsparcc.cpp  calcsparcc.h  cluster.cpp  cluster.hpp  clusterclassic.cpp  clusterclassic.h  collect.cpp  collect.h  collectdisplay.h  collectorscurvedata.h  commandfactory.cpp  commandfactory.hpp  commandmaker.h  commandoptionparser.cpp  commandoptionparser.hpp  commandparameter.h  commandtoprocess.h  completelinkage.cpp  consensus.cpp  consensus.h  display.h  dlibshuff.cpp  dlibshuff.h  endiannessmacros.h  engine.cpp  engine.hpp  fileoutput.cpp  fileoutput.h  gotohoverlap.cpp  gotohoverlap.hpp  hcluster.cpp  hcluster.h  heatmap.cpp  heatmap.h  heatmapsim.cpp  heatmapsim.h  inputdata.cpp  inputdata.h  (+65 more)
source/calculators/: ace.cpp  ace.h  bergerparker.cpp  bergerparker.h  boneh.cpp  boneh.h  bootstrap.cpp  bootstrap.h  bstick.cpp  bstick.h  calculator.cpp  calculator.h  canberra.cpp  canberra.h  chao1.cpp  chao1.h  coverage.cpp  coverage.h  dist.h  eachgapdist.h  eachgapdistignorens.h  eachgapignore.h  efron.cpp  efron.h  filters.h  geom.cpp  geom.h  goodscoverage.cpp  goodscoverage.h  gower.cpp  gower.h  hamming.cpp  hamming.h  heip.cpp  heip.h  hellinger.cpp  hellinger.h  ignoregaps.h  invsimpson.cpp  invsimpson.h  (+118 more)
source/chimera/: bellerophon.cpp  bellerophon.h  ccode.cpp  ccode.h  chimera.cpp  chimera.h  chimeracheckrdp.cpp  chimeracheckrdp.h  chimerarealigner.cpp  chimerarealigner.h  chimeraslayer.cpp  chimeraslayer.h  decalc.cpp  decalc.h  maligner.cpp  maligner.h  myPerseus.cpp  myPerseus.h  pintail.cpp  pintail.h  slayer.cpp  slayer.h
source/classifier/: alignnode.cpp  alignnode.h  aligntree.cpp  aligntree.h  bayesian.cpp  bayesian.h  classify.cpp  classify.h  kmernode.cpp  kmernode.h  kmertree.cpp  kmertree.h  knn.cpp  knn.h  phylosummary.cpp  phylosummary.h  phylotree.cpp  phylotree.h  taxonomyequalizer.cpp  taxonomyequalizer.h  taxonomynode.cpp  taxonomynode.h
source/clearcut/: clearcut.cpp  clearcut.h  cmdargs.cpp  cmdargs.h  common.h  distclearcut.cpp  distclearcut.h  dmat.cpp  dmat.h  fasta.cpp  getopt_long.cpp  getopt_long.h
source/commandparameters/: alignreportfileparameter.cpp  alignreportfileparameter.h  booleanparameter.cpp  booleanparameter.h  calcparameter.h  commandparameterbase.h  commandparametercollection.cpp  commandparametercollection.h  contigsreportfileparameter.cpp  contigsreportfileparameter.h  countfileparameter.cpp  countfileparameter.h  directoryparameter.cpp  directoryparameter.h  fastafileparameter.cpp  fastafileparameter.h  groupfileparameter.cpp  groupfileparameter.h  inputdirectoryparameter.cpp  inputdirectoryparameter.h  inputtypeparameter.cpp  inputtypeparameter.h  integerparameter.cpp  integerparameter.h  multipleexclusiveparameter.cpp  multipleexclusiveparameter.h  multipleparameter.cpp  multipleparameter.h  namefileparameter.cpp  namefileparameter.h  numberparameter.cpp  numberparameter.h  outputdirectoryparameter.cpp  outputdirectoryparameter.h  outputfileparameter.cpp  outputfileparameter.h  parametertypes.h  processorsparameter.cpp  processorsparameter.h  qfileparameter.cpp  (+10 more)
source/commands/: aligncommand.cpp  aligncommand.h  amovacommand.cpp  amovacommand.h  anosimcommand.cpp  anosimcommand.h  binsequencecommand.cpp  binsequencecommand.h  biominfocommand.cpp  biominfocommand.h  catchallcommand.cpp  catchallcommand.h  chimerabellerophoncommand.cpp  chimerabellerophoncommand.h  chimeraccodecommand.cpp  chimeraccodecommand.h  chimeracheckcommand.cpp  chimeracheckcommand.h  chimeraperseuscommand.cpp  chimeraperseuscommand.h  chimerapintailcommand.cpp  chimerapintailcommand.h  chimeraslayercommand.cpp  chimeraslayercommand.h  chimerauchimecommand.cpp  chimerauchimecommand.h  chopseqscommand.cpp  chopseqscommand.h  classifyotucommand.cpp  classifyotucommand.h  classifyrfsharedcommand.cpp  classifyrfsharedcommand.h  classifyseqscommand.cpp  classifyseqscommand.h  classifysvmsharedcommand.cpp  classifysvmsharedcommand.h  classifytreecommand.cpp  classifytreecommand.h  clearcutcommand.cpp  clearcutcommand.h  (+258 more)
source/communitytype/: communitytype.cpp  communitytype.h  kmeans.cpp  kmeans.h  pam.cpp  pam.h  qFinderDMM.cpp  qFinderDMM.h
source/datastructures/: alignment.cpp  alignment.hpp  alignmentcell.hpp  alignmentdb.cpp  blastdb.cpp  compare.h  counttable.cpp  counttable.h  database.cpp  database.hpp  datavector.hpp  designmap.h  fastamap.cpp  fastamap.h  fastqread.h  flowdata.cpp  flowdata.h  fullmatrix.cpp  groupmap.cpp  groupmap.h  isequenceparser.cpp  isequenceparser.h  kmer.hpp  kmeralign.h  kmerdb.cpp  listvector.hpp  nameassignment.cpp  nameassignment.hpp  namemap.cpp  namemap.h  oligos.cpp  oligos.h  ordervector.cpp  ordervector.hpp  outputtype.cpp  outputtype.h  qualityscores.h  rabundvector.cpp  rabundvector.hpp  referencedb.cpp  (+31 more)
source/filehandling/: countfileread.cpp  countfileread.h  countfilewrite.cpp  countfilewrite.h  fastafileread.cpp  fastafileread.h  fastafilewrite.cpp  fastafilewrite.h  file.cpp  file.h  groupfileread.cpp  groupfileread.h  groupfilewrite.cpp  groupfilewrite.h  namefileread.cpp  namefileread.h  namefilewrite.cpp  namefilewrite.h  summaryfileread.cpp  summaryfileread.h  summaryfilewrite.cpp  summaryfilewrite.h  textfile.h  textfileread.cpp  textfileread.h  textfilewrite.cpp  textfilewrite.h
source/g3log/: Build.cmake  CMakeLists.txt  crashhandler_windows.cpp  filesink.cpp  filesinkhelper.ipp  g3log.cpp  logcapture.cpp  loglevels.cpp  logmessage.cpp  logworker.cpp  stacktrace_windows.cpp  time.cpp
source/metastats/: mothurfisher.cpp  (+3 more)
source/uchime_src/: CMakeLists.txt  alnheuristics.h  alnparams.cpp  alnparams.h  alpha.h  chainer.h  chime.h  diagbox.h  dp.h  evalue.h  hspfinder.h  mx.h  myutils.cpp  myutils.h  orf.h  out.h  path.h  seq.h  seqdb.h  sfasta.h  timing.h  uc.h  ultra.h  windex.h
(+137 files in other folders)
